2012-06-02  Isao Shimizu  <isaoshimizu@gmail.com>

	* util/ieee1275/ofpath.c (check_sas): Fix sas path.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (print_line): Fix off-by-one error which
	resulted in \\ at the end of the line.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/parser.c (grub_parser_state_transitions): Handle \t.
	(grub_parser_cmdline_state): Likewise.
	(grub_parser_split_cmdline): Likewise.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_guess_root_devices): Don't canonicalise
	/dev/root and /dev/dm-*.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (update_screen): Fix loop condition to
	fix partially stale display.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (backward_char): Use right line for
	substraction.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write) [__linux__]:
	Fix MBR remapping workaround.
	(grub_util_biosdisk_read) [__linux__]: Likewise.

2012-06-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Check for ieee1275 and not ieee1276.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta6.

2012-05-31  Christer Weinigel <christer@weinigel.se>

	* grub-core/normal/main.c (grub_file_getline): Fix off-by-one error.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Use right version.
	(grub_cmd_linux): Likewise.

2012-05-31  Christer Weinigel <christer@weinigel.se>

	Fix EHCI low-speed.

	* grub-core/bus/usb/ehci.c (GRUB_EHCI_MULT_ONE): Fix the value.
	(GRUB_EHCI_MULT_TWO): Likewise.
	(GRUB_EHCI_MULT_THREE): Likewise.
	(GRUB_EHCI_CMASK_MASK): New enum value.
	(GRUB_EHCI_SMASK_MASK): Likewise.
	(GRUB_EHCI_CMASK_OFF): Likewise.
	(GRUB_EHCI_SMASK_OFF): Likewise.