@@ -368,7 +368,7 @@ grub_video_gop_setup (unsigned int width, unsigned int height,
     {
       err = 1;
       grub_gop_get_preferred_mode (&preferred_width, &preferred_height);
-      if (err)
+      if (err || preferred_width >= 4096 || preferred_height >= 4096)
 	{
 	  preferred_width = 800;
 	  preferred_height = 600;
